OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/Dealer_Insurance__c.object-meta.xml
<CustomObject>
    <label>Dealer Insurance</label>
    <nameField>
        <displayFormat>INS-{00000}</displayFormat>
        <label>Dealer Insurance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Insurances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>