OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer Insurances</relationshipLabel>
    <relationshipName>Dealer_Insurances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>