OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/fields/Commercial_Automobile_Status__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Automobile_Status__c</fullName>
    <label>Automobile Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expiring Soon</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Not required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>