OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/fields/Commercial_General_Liability_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Commercial_General_Liability_Exp_Date__c</fullName>
    <label>General Liability Exp Date</label>
    <type>Date</type>
</CustomField>