OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/fields/Commerical_Automobile_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Commerical_Automobile_Exp_Date__c</fullName>
    <label>Automobile Exp Date</label>
    <type>Date</type>
</CustomField>