OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/fields/Dealer_Active__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Active</label>
    <type>Checkbox</type>
</CustomField>