OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workers Comp</fullName>
            </value>
            <value>
                <fullName>General Liability</fullName>
            </value>
            <value>
                <fullName>Automobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>