OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/fields/Workers_Comp_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp_Exp_Date__c</fullName>
    <label>Workers Comp Exp Date</label>
    <type>Date</type>
</CustomField>