OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/fields/Workers_Comp_Status__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp_Status__c</fullName>
    <label>Workers Comp Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expiring Soon</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
                <label>Waived</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>