OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/recordTypes/Brightspeed.recordType-meta.xml
<RecordType>
    <fullName>Brightspeed</fullName>
    <active>true</active>
    <label>Brightspeed</label>
</RecordType>