OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/recordTypes/Brinks.recordType-meta.xml
<RecordType>
    <fullName>Brinks</fullName>
    <active>true</active>
    <label>Brinks</label>
</RecordType>