OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/recordTypes/Chuzo_Shop_Link.recordType-meta.xml
<RecordType>
    <fullName>Chuzo_Shop_Link</fullName>
    <active>true</active>
    <label>Chuzo Shop Link</label>
</RecordType>