OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/recordTypes/DTV_Commercial.recordType-meta.xml
<RecordType>
    <fullName>DTV_Commercial</fullName>
    <active>true</active>
    <label>DTV Commercial</label>
</RecordType>