OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/recordTypes/MDP.recordType-meta.xml
<RecordType>
    <fullName>MDP</fullName>
    <active>true</active>
    <label>MDP</label>
</RecordType>