OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/recordTypes/Optimum.recordType-meta.xml
<RecordType>
    <fullName>Optimum</fullName>
    <active>true</active>
    <label>Optimum</label>
</RecordType>