OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/recordTypes/Safehaven.recordType-meta.xml
<RecordType>
    <fullName>Safehaven</fullName>
    <active>true</active>
    <label>Safehaven</label>
</RecordType>