OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/recordTypes/Spectrum.recordType-meta.xml
<RecordType>
    <fullName>Spectrum</fullName>
    <active>true</active>
    <label>Spectrum</label>
</RecordType>