OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/recordTypes/Telogix.recordType-meta.xml
<RecordType>
    <fullName>Telogix</fullName>
    <active>true</active>
    <label>Telogix</label>
</RecordType>