OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/recordTypes/Verizon_D2D_COM.recordType-meta.xml
<RecordType>
    <fullName>Verizon_D2D_COM</fullName>
    <active>true</active>
    <label>Verizon</label>
</RecordType>