OnboardingV2Minimal/force-app/main/default/objects/Dealer_Insurance__c/recordTypes/Viasat.recordType-meta.xml
<RecordType>
    <fullName>Viasat</fullName>
    <active>true</active>
    <label>Viasat</label>
</RecordType>